Set up codecov.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,9 @@ script:
   - "make html"
   - "cd .."
   - "python tests.py"
+  - "coverage tests.py"
   - "python setup.py sdist"
   - "python setup.py bdist_wheel"
+
+after_success:
+- codecov
