--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   - "make html"
   - "cd .."
   - "python tests.py"
-  - "coverage tests.py"
+  - "coverage run tests.py"
   - "python setup.py sdist"
   - "python setup.py bdist_wheel"
 
